# cmake-vs-vcpkg-catch2-template

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  boot.ps1  helloworld.h  readme.md  tests.cpp
include/static/: helloworld.h
src/: helloworld.cpp  main.cpp
